--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,31 +7,31 @@
 
     <fragment
         android:id="@+id/navigation_own_list"
-        android:name="com.example.navbar.ui.home.OwnListFragment"
+        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.OwnListFragment"
         android:label="My Mood Events"
         tools:layout="@layout/fragment_own_moods" />
 
     <fragment
         android:id="@+id/navigation_friends_moods"
-        android:name="com.example.navbar.ui.friendsmood.FriendsMoodsFragment"
+        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.FriendsMoodsFragment"
         android:label="Friends' Mood Events"
         tools:layout="@layout/fragment_friends_moods" />
 
     <fragment
         android:id="@+id/navigation_add_post"
-        android:name="com.example.navbar.ui.addpost.AddPostFragment"
+        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.AddPostFragment"
         android:label="Add a Mood Event"
         tools:layout="@layout/fragment_add_post" />
 
     <fragment
         android:id="@+id/navigation_friends"
-        android:name="com.example.navbar.ui.friends.FriendsFragment"
+        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.FriendsFragment"
         android:label="Friends"
         tools:layout="@layout/fragment_friends" />
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.example.navbar.ui.profile.ProfileFragment"
+        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
 
