--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,32 +7,32 @@
 
     <fragment
         android:id="@+id/navigation_own_list"
-        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.OwnListFragment"
-        android:label="My Mood Events"
+        android:name="io.github.cmput301f19t19.legendary_fiesta.ui.OwnMoodsFragment"
+        android:label="@string/navbar_my_list"
         tools:layout="@layout/fragment_own_moods" />
 
     <fragment
         android:id="@+id/navigation_friends_moods"
         android:name="io.github.cmput301f19t19.legendary_fiesta.ui.FriendsMoodsFragment"
-        android:label="Friends' Mood Events"
+        android:label="@string/navbar_friends_list"
         tools:layout="@layout/fragment_friends_moods" />
 
     <fragment
         android:id="@+id/navigation_add_post"
         android:name="io.github.cmput301f19t19.legendary_fiesta.ui.AddPostFragment"
-        android:label="Add a Mood Event"
+        android:label="@string/navbar_add_post"
         tools:layout="@layout/fragment_add_post" />
 
     <fragment
         android:id="@+id/navigation_friends"
         android:name="io.github.cmput301f19t19.legendary_fiesta.ui.FriendsFragment"
-        android:label="Friends"
+        android:label="@string/navbar_friends"
         tools:layout="@layout/fragment_friends" />
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="io.github.cmput301f19t19.legendary_fiesta.ui.ProfileFragment"
-        android:label="Profile"
+        android:label="@string/navbar_profile"
         tools:layout="@layout/fragment_profile" />
 
 </navigation>
