--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorHappy">#F9D5BB</color>
-    <color name="colorAngry">#F66767</color>
-    <color name="colorScared">#AC8DAF</color>
-    <color name="colorSad">#005580</color>
-    <color name="colorDisgusted">#85ADAD</color>
-    <color name="colorSurprised">#FBC1BC</color>
-    <color name="colorNeutral">#BFBFBF</color>
+    <color name="color_happy">#F9D5BB</color>
+    <color name="color_angry">#F66767</color>
+    <color name="color_scared">#AC8DAF</color>
+    <color name="color_sad">#005580</color>
+    <color name="color_disgusted">#85ADAD</color>
+    <color name="color_surprised">#FBC1BC</color>
+    <color name="color_neutral">#BFBFBF</color>
 </resources>
