--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="color_happy">#F9D5BB</color>
+    <color name="color_happy">#F6E5D8</color>
     <color name="color_angry">#F66767</color>
     <color name="color_scared">#AC8DAF</color>
     <color name="color_sad">#005580</color>
