--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@drawable/background"
+    android:orientation="vertical">
 
 
     <Button
         android:id="@+id/show_on_map"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_weight="1"
         android:background="@drawable/button_show_on_map"
         android:fontFamily="@font/abeezee"
         android:gravity="left|center_vertical"
@@ -24,4 +24,12 @@
         android:textColor="@color/color_angry"
         android:textColorHighlight="@color/color_surprised"
         android:textSize="18sp" />
+
+    <ListView
+        android:id="@+id/mood_list"
+        android:layout_width="match_parent"
+        android:layout_height="550dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
+
 </LinearLayout>
