--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -8,17 +8,18 @@
 
 
     <Button
-        android:id="@+id/show_on_map"
+        android:id="@+id/show_on_map_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_weight="0"
         android:background="@drawable/button_show_on_map"
         android:fontFamily="@font/abeezee"
         android:gravity="left|center_vertical"
-        android:paddingLeft="10dp"
+        android:paddingLeft="15dp"
         android:text="Show on map"
         android:textAllCaps="false"
         android:textColor="@color/color_angry"
@@ -32,4 +33,9 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp" />
 
+    <Spinner
+        android:id="@+id/filter_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0" />
 </LinearLayout>
