--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="color_disgusted">#85ADAD</color>
     <color name="color_surprised">#FBC1BC</color>
     <color name="color_neutral">#BFBFBF</color>
+    <color name="color_white">#FFFFFFFF</color>
 </resources>
