--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -6,24 +6,19 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
-    <Button
-        android:id="@+id/date_picker_button"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
+    <TextView
+        android:id="@+id/greetingView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/add_post_date_button"
+        android:layout_marginEnd="8dp"
+        android:text="@string/add_post_greeting"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:text="@string/add_post_time_button"
-        app:layout_constraintStart_toEndOf="@+id/editText3"
-        app:layout_constraintTop_toTopOf="@+id/editText3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -95,19 +90,42 @@
             app:srcCompat="@drawable/icon_sad" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/greetingView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/date_picker_button"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/add_post_greeting"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/add_post_date_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <EditText
+        android:id="@+id/date_edittext"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="date"
+        app:layout_constraintStart_toEndOf="@+id/date_picker_button"
+        app:layout_constraintTop_toTopOf="@+id/date_picker_button" />
+
+    <Button
+        android:id="@+id/time_picker_button"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/add_post_time_button"
+        app:layout_constraintStart_toEndOf="@+id/date_edittext"
+        app:layout_constraintTop_toTopOf="@+id/date_edittext" />
+
+    <EditText
+        android:id="@+id/time_edittext"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="time"
+        app:layout_constraintStart_toEndOf="@+id/time_picker_button"
+        app:layout_constraintTop_toTopOf="@+id/time_picker_button" />
 
     <EditText
         android:id="@+id/description_view"
@@ -125,7 +143,7 @@
         app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/cancel_button"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
@@ -135,7 +153,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/done_button"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:layout_marginEnd="8dp"
@@ -144,21 +162,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="time"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="@+id/button2" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="date"
-        app:layout_constraintStart_toEndOf="@+id/date_picker_button"
-        app:layout_constraintTop_toTopOf="@+id/date_picker_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
