Hide action bar, finished SpinnerUI implementation
Added new SpinnerArrayAdapter to parse data to spinner UI object

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="color_surprised">#FBC1BC</color>
     <color name="color_neutral">#BFBFBF</color>
     <color name="color_white">#FFFFFFFF</color>
+    <color name="transparent_background">#60FFFFFF</color>
 </resources>
