--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -34,6 +34,8 @@
 
         <Spinner
             android:id="@+id/filter_spinner"
+            android:overlapAnchor="false"
+            android:dropDownVerticalOffset="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -41,7 +43,9 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:background="@null"
-            android:baselineAligned="false" />
+            android:baselineAligned="false"
+            android:popupBackground="@color/transparent_background"
+            android:spinnerMode="dropdown"/>
 
         <ImageView
             android:id="@+id/imageView"
