--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/filter_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fontFamily="@font/abeezee"
-    android:textSize="@dimen/default_font_size"
     android:paddingLeft="@dimen/default_left_padding"
-    android:textColor="@color/color_white">
+    style="@style/WhiteText">
 </TextView>
