--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/mood_neutral"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/icon_neutral" />
 
         <ImageView
@@ -93,20 +94,23 @@
 
     <Button
         android:id="@+id/date_picker_button"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/add_post_date_button"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toStartOf="@+id/date_edittext"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <EditText
         android:id="@+id/date_edittext"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="date"
+        app:layout_constraintEnd_toStartOf="@+id/time_picker_button"
         app:layout_constraintStart_toEndOf="@+id/date_picker_button"
         app:layout_constraintTop_toTopOf="@+id/date_picker_button" />
 
@@ -116,20 +120,24 @@
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:text="@string/add_post_time_button"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toStartOf="@+id/time_edittext"
         app:layout_constraintStart_toEndOf="@+id/date_edittext"
         app:layout_constraintTop_toTopOf="@+id/date_edittext" />
 
     <EditText
         android:id="@+id/time_edittext"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="time"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/time_picker_button"
         app:layout_constraintTop_toTopOf="@+id/time_picker_button" />
 
     <EditText
-        android:id="@+id/description_view"
+        android:id="@+id/description_edittext"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
