--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -11,7 +11,7 @@
         style="@style/WhiteText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/add_post_greeting"
@@ -24,6 +24,7 @@
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,52 +32,74 @@
 
         <RadioButton
             android:id="@+id/icon_neutral"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@drawable/icon_neutral_70px" />
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_weight="0"
+            android:adjustViewBounds="true"
+            android:background="@drawable/icon_neutral_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
         <RadioButton
             android:id="@+id/icon_happy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@drawable/icon_happy_70px" />
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_weight="0"
+            android:background="@drawable/icon_happy_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
         <RadioButton
             android:id="@+id/icon_surprised"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@drawable/icon_surprised_70px" />
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_weight="0"
+            android:background="@drawable/icon_surprised_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
         <RadioButton
             android:id="@+id/icon_angry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@drawable/icon_angry_70px" />
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_weight="0"
+            android:background="@drawable/icon_angry_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
         <RadioButton
             android:id="@+id/icon_scared"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@drawable/icon_scared_70px" />
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_weight="0"
+            android:background="@drawable/icon_scared_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
         <RadioButton
             android:id="@+id/icon_disgusted"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:button="@drawable/icon_disgusted_70px" />
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_weight="0"
+            android:background="@drawable/icon_disgusted_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
         <RadioButton
             android:id="@+id/icon_sad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_weight="1"
-            android:button="@drawable/icon_sad_70px" />
+            android:background="@drawable/icon_sad_70px"
+            android:button="@null"
+            android:scaleX="0.9"
+            android:scaleY="0.9" />
 
     </RadioGroup>
 
@@ -84,7 +107,7 @@
         android:id="@+id/date_picker_button"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/add_post_date_button"
         android:textSize="13sp"
         app:layout_constraintEnd_toStartOf="@+id/date_edittext"
@@ -95,33 +118,33 @@
         android:id="@+id/date_edittext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:ems="10"
+        android:focusable="false"
         android:inputType="date"
+        app:layout_constraintBaseline_toBaselineOf="@+id/date_picker_button"
         app:layout_constraintEnd_toStartOf="@+id/time_picker_button"
-        app:layout_constraintStart_toEndOf="@+id/date_picker_button"
-        app:layout_constraintTop_toTopOf="@+id/date_picker_button" />
+        app:layout_constraintStart_toEndOf="@+id/date_picker_button" />
 
     <Button
         android:id="@+id/time_picker_button"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
         android:text="@string/add_post_time_button"
         android:textSize="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/time_edittext"
-        app:layout_constraintStart_toEndOf="@+id/date_edittext"
-        app:layout_constraintTop_toTopOf="@+id/date_edittext" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/date_edittext"
+        app:layout_constraintEnd_toStartOf="@+id/time_edittext" />
 
     <EditText
         android:id="@+id/time_edittext"
-        android:layout_width="0dp"
+        android:layout_width="99dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:clickable="true"
+        android:focusable="false"
         android:ems="10"
         android:inputType="time"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/time_picker_button"
-        app:layout_constraintTop_toTopOf="@+id/time_picker_button" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/time_picker_button"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/description_edittext"
