Reformat Code, Fixed small bug

--- a/app/src/main/res/layout/spinner_dropdown.xml
+++ b/app/src/main/res/layout/spinner_dropdown.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="40dp"
     android:paddingBottom="5dp"
@@ -12,7 +13,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_weight="0"
-        android:background="@null"/>
+        android:background="@null" />
 
     <TextView
         android:id="@+id/spinner_text"
