--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -4,5 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/default_left_padding"
-    style="@style/WhiteText">
-</TextView>
+    style="@style/WhiteText"></TextView>
