--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -197,48 +197,15 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/date_edittext"
-        android:layout_width="91dp"
-        android:layout_height="40dp"
-        android:clickable="true"
-        android:ems="10"
-        android:focusable="false"
-        android:inputType="date"
-        app:layout_constraintBaseline_toBaselineOf="@+id/date_picker_button"
-        app:layout_constraintStart_toEndOf="@+id/date_picker_button" />
-
-    <Button
-        android:id="@+id/date_picker_button"
-        android:layout_width="88dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/add_post_date_button"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout" />
-
-    <Button
-        android:id="@+id/time_picker_button"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/add_post_time_button"
-        android:textSize="13sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/date_edittext"
-        app:layout_constraintEnd_toStartOf="@+id/time_edittext" />
-
-    <EditText
         android:id="@+id/time_edittext"
         android:layout_width="99dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:clickable="true"
         android:ems="10"
         android:focusable="false"
         android:inputType="time"
-        app:layout_constraintBaseline_toBaselineOf="@+id/time_picker_button"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/emotionRadioGroup"
+        tools:layout_editor_absoluteY="126dp" />
 
     <Button
         android:id="@+id/cancel_button"
@@ -265,7 +232,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="@string/add_post_description_hint"
@@ -273,7 +239,49 @@
         android:textColor="#00FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />
+        tools:layout_editor_absoluteY="179dp" />
+
+    <RelativeLayout
+        android:id="@+id/dateInputLayout"
+        android:layout_width="131dp"
+        android:layout_height="48dp"
+        app:layout_constraintStart_toStartOf="@+id/emotionRadioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout">
+
+        <EditText
+            android:id="@+id/dateEditText"
+            android:layout_width="91dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:clickable="true"
+            android:ems="10"
+            android:focusable="false"
+            android:inputType="date" />
+
+        <ImageView
+            android:id="@+id/dateView"
+            android:layout_width="59dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            app:srcCompat="@drawable/input_button_white" />
+
+        <TextView
+            android:id="@+id/dateText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date" />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/timeView"
+        android:layout_width="59dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/time_edittext"
+        app:layout_constraintTop_toBottomOf="@+id/TextLinearLayout"
+        app:srcCompat="@drawable/input_button_white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
