--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="default_font_size">20sp</dimen>
     <dimen name="default_left_padding">15dp</dimen>
+    <dimen name="input_button_font_size">15dp</dimen>
 </resources>
