--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,8 @@
         <item name="android:fontFamily">@font/abeezee</item>
     </style>
 
+    <style name="InputButtonText" parent="WhiteText">
+        <item name="android:textColor">@color/button_color</item>
+        <item name="android:textSize">@dimen/input_button_font_size</item>
+    </style>
 </resources>
